--- a/css/pruebaFoto.css
+++ b/css/pruebaFoto.css
@@ -1,9 +1,11 @@
 .display_image {
-    width: 300px;
-    height: 200px;
+    display: block;
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: auto;
     border: 1px solid black;
     background-position: center;
-    background-size: cover;
+    /*    background-size: cover; */
     background-image: image();
 }
 
@@ -13,5 +15,5 @@ body {
     align-items: center;
     gap: 10px;
     flex-direction: column;
-    height: 100vh;
+    /*    height: 100vh;*/
 }
