--- a/css/stylesCandidato.css
+++ b/css/stylesCandidato.css
@@ -20,12 +20,15 @@
     width: 100%;
 }
 
-#display_image {
-    width: 375px;
-    height: 211px;
+.display_image {
+    display: block;
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: auto;
     border: 1px solid black;
     background-position: center;
-    background-size: cover;
+    /*    background-size: cover; */
+    background-image: image();
 }
 
 #myDiv {
@@ -93,6 +96,12 @@ body {
     background-color: rgb(168, 187, 187);
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+
+    /*    display: flex; */
+    /*  justify-content: center; */
+    /*align-items: center; */
+    /*gap: 10px; */
+    /*flex-direction: column; */
 }
 
 
@@ -108,27 +117,15 @@ body {
     /*    float: left; */
 }
 
-.c00 {
-    grid-area: input_foto;
-    max-height: 100px;
-    /*  border-right: 0px; */
-    /*    border-left: 0px; */
-    /* grid-column: 1/4; */
-    /* grid-row: 1 / span 2; */
-    /*    grid-area: 1/1/3/4; */
-    /*    grid-column: 1 / span 2; */
+.c8 {
+    grid-area: titulo;
+    /*    max-height: 100px; */
     background-color: rgb(220, 226, 240);
 }
 
-.c01 {
+.c9 {
     grid-area: foto;
-    max-height: 100px;
-    /*  border-right: 0px; */
-    /*    border-left: 0px; */
-    /* grid-column: 1/4; */
-    /* grid-row: 1 / span 2; */
-    /*    grid-area: 1/1/3/4; */
-    /*    grid-column: 1 / span 2; */
+    /*    max-height: 100px; */
     background-color: rgb(220, 226, 240);
 }
 
@@ -197,7 +194,8 @@ body {
     width: 100%;
     /*    margin-left: 2%; */
     /*  margin-right: 2%; */
-    grid-template-areas: 'input_foto foto'
+    grid-template-areas:
+        'titulo foto'
         'vacante candidato'
         'estatus candidato'
         'asigna conocimientos'
