--- a/css/stylesBoxGrid.css
+++ b/css/stylesBoxGrid.css
@@ -22,12 +22,13 @@
 
 .display_image {
     display: block;
+    max-width: 100%;
+    max-height: 100%;
     margin-top: auto;
     margin-left: auto;
     margin-right: auto;
     border: 1px solid black;
     background-position: center;
-    /*    background-size: cover; */
     background-image: image();
 }
 
@@ -125,7 +126,6 @@ body {
 
 .c2 {
     grid-area: grafico;
-    /*    max-height: 100px; */
     background-color: rgb(220, 226, 240);
 }
 
@@ -174,6 +174,20 @@ body {
     /*    border: 1px solid black; */
 }
 
+@media (max-width: 768px) {
+    .img-ajuste {
+        height: 85vh;
+        max-width: 90%;
+    }
+}
+
+@media (max-width: 1200px) {
+    .img-ajuste {
+        height: 50vh;
+        max-width: 70%;
+    }
+}
+
 .img-center {
     display: block;
     margin-left: auto;
@@ -192,6 +206,59 @@ body {
     margin-right: 5px;
 }
 
+.al-40 {
+    height: 40%;
+    width: 40%;
+    display: block;
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.al-50 {
+    height: 50%;
+    width: 50%;
+    display: block;
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.al-60 {
+    height: 60%;
+    width: 60%;
+    display: block;
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.al-70 {
+    height: 70%;
+    width: 70%;
+    display: block;
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.h-25 {
+    height: 25%;
+}
+
+.h-40 {
+    height: 40%;
+}
+
+
+.h-50 {
+    height: 50%;
+}
+
+.h-75 {
+    height: 75%;
+}
+
 .w-10 {
     width: 10% !important;
 }
@@ -202,6 +269,10 @@ body {
 
 .w-25 {
     width: 25% !important;
+}
+
+.w-40 {
+    width: 40% !important;
 }
 
 .w-50 {
