--- a/css/stylesCV.css
+++ b/css/stylesCV.css
@@ -11,6 +11,7 @@
 }
 
 .container {
+    font-family: arial, sans-serif, verdana;
     display: block;
     /*    margin-left: 10%; */
     /*    margin-right: 10%; */
@@ -86,10 +87,10 @@ body {
     /*   width: 150px; */
     /*  height: 150px; */
     /*    border: 1px solid black; */
-    background-color: antiquewhite;
+    background-color: rgb(248, 242, 234);
     /*  margin: 15px; */
     text-align: left;
-    padding: 10px;
+    /*    padding: 10px; */
     /*    line-height: 150px; */
     /*    float: left; */
 }
@@ -136,7 +137,8 @@ body {
     grid-area: estudios;
     /*grid-column: 3/4; */
     /*    background-color: rgb(171, 192, 238);*/
-    background-color: cadetblue;
+    /*    background-color: rgb(64, 236, 241);*/
+    background-color: rgb(171, 192, 238);
 }
 
 .c31 {
@@ -190,6 +192,7 @@ body {
 }
 
 .grid-layout2 {
+    font-size: 18px;
     display: grid;
     height: 200px;
     width: 80%;
@@ -206,6 +209,7 @@ body {
 }
 
 .grid-layout3 {
+    font-size: 18px;
     display: grid;
     height: 200px;
     width: 80%;
@@ -222,41 +226,43 @@ body {
 }
 
 .grid-layout4 {
-    display: grid !important;
-    height: 100% !important;
-    width: 80% !important;
-    margin-left: 10% !important;
-    margin-right: 10% !important;
-    grid-template-areas: 'experiencia' !important;
-    grid-template-rows: 100% !important;
-    grid-template-columns: 100% !important;
-    background-color: chartreuse !important;
+    font-size: 18px;
+    display: grid;
+    height: 600px;
+    margin-left: 10%;
+    margin-right: 10%;
+    grid-template-areas: 'experiencia';
+    grid-template-rows: 100%;
+    grid-template-columns: auto;
+    background-color: rgb(125, 236, 14);
     /*    border: 1px solid black; */
 }
 
 .grid-layout5 {
+    font-size: 18px;
     display: grid;
     height: 100px;
-    width: 80%;
     margin-left: 10%;
     margin-right: 10%;
-    grid-template-areas: 'cursos cursos';
+    grid-template-areas: 'cursos';
     grid-template-rows: 100%;
-    grid-template-columns: auto auto;
-    background-color: rgb(238, 243, 233);
+    grid-template-columns: auto;
+    background-color: rgb(125, 236, 14);
     /*    border: 1px solid black; */
 }
 
 
 .c4 {
     grid-area: cursos;
+    width: 100%;
     /*    grid-column: 1 / span 2; */
     background-color: rgb(171, 192, 238);
 }
 
 .c5 {
     grid-area: experiencia;
-    grid-column: 1;
+    /*    grid-column: 1;*/
+    width: 100%;
     background-color: rgb(171, 192, 238);
 }
 
@@ -284,6 +290,7 @@ body {
 }
 
 .grid-layout {
+    font-size: 18px;
     display: grid;
     height: 1800px;
     width: 80%;
@@ -327,6 +334,10 @@ body {
     display: block;
     margin-left: auto;
     margin-right: 5px;
+}
+
+.w-5 {
+    width: 5% !important;
 }
 
 .w-10 {
