Ajustes a conocimientos y vacantes

--- a/css/tablas3.css
+++ b/css/tablas3.css
@@ -5,6 +5,18 @@
     font-size: 12px;
     width: 100%;
     overflow: auto;
+    height: 100%;
+    outline-offset: -1px;
+    /* max-height: 5em; */
+}
+
+.layoutx2 {
+    font-family: arial, sans-serif, verdana;
+    display: block;
+    margin: auto;
+    font-size: 12px;
+    /*  width: 100%; */
+    overflow: auto;
     /*    height: 100%; */
     outline-offset: -1px;
     /*    max-height: 5em; */
