--- a/css/vacantes.css
+++ b/css/vacantes.css
@@ -135,8 +135,8 @@ body {
     font-style: normal;
 
     display: grid;
-    height: 600px;
-    width: 80%;
+    /*    height: 600px; */
+    /*   width: 1200px; */
     margin-left: 10%;
     margin-right: 10%;
     grid-template-areas: 'logox cabecera'
