--- a/css/stylesCV.css
+++ b/css/stylesCV.css
@@ -167,15 +167,31 @@ body {
     font-weight: normal;
     font-style: normal;
     display: grid;
-    height: 100px;
+    /*    height: 100px; */
     margin-left: 10%;
     margin-right: 10%;
     grid-template-areas: 'cursos';
     grid-template-rows: 100%;
     grid-template-columns: auto;
-    background-color: rgb(125, 236, 14);
+    /*    background-color: rgb(125, 236, 14);*/
     /*    border: 1px solid black; */
 }
+
+.grid-layout6 {
+    /*    font-size: 18px;*/
+    font-weight: normal;
+    font-style: normal;
+    display: grid;
+    /*    height: 100px; */
+    margin-left: 10%;
+    margin-right: 10%;
+    grid-template-areas: 'herramientas';
+    grid-template-rows: 100%;
+    grid-template-columns: auto;
+    /*    background-color: rgb(125, 236, 14);*/
+    /*    border: 1px solid black; */
+}
+
 
 
 .c4 {
@@ -233,7 +249,7 @@ body {
         'herramientas herramientas herramientas'
         'idiomas idiomas idiomas'
         'comentarios comentarios comentarios';
-    grid-template-rows: auto auto auto 15% auto auto 8% auto;
+    grid-template-rows: auto auto auto auto auto auto 8% auto;
     grid-template-columns: 25% auto 15%;
     /*    grid-template-columns: 80% auto; */
     /*    grid-template-rows: 20% 10% 60% auto; */
